istio/web-v1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: web
    version: v1
  name: web-v1
spec:
  containers:
  - image: httpd
    imagePullPolicy: IfNotPresent  
    name: apache
    ports:
    - containerPort: 80    
    volumeMounts:    
     - name: config-volume
       mountPath: /usr/local/apache2/htdocs
  volumes:
    - name: config-volume
      configMap:
        name: web1
        items:
        - key: index
          path: web/index.html
