istio/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: web
  name: web
spec:
  ports:
  - port: 80
    name: http  
    targetPort: 80    
  selector:
    name: web
